// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EducationSection matches snapshot (dark mode) 1`] = `
<div>
  <section
    class="css-10skod6"
    data-testid="education-section"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-5c1adp-MuiContainer-root"
    >
      <div>
        <h2
          class="css-k88837"
        >
          Education
        </h2>
        <p
          class="MuiTypography-root MuiTypography-body1 css-wfrkm6-MuiTypography-root"
        >
          The foundation that shaped my thinking and technical skills.
        </p>
      </div>
      <div
        class="MuiBox-root css-1gtzesu"
      >
        <div>
          <div
            class="MuiBox-root css-1j8oeui"
          >
            <div
              class="MuiBox-root css-y8rzaa"
            >
              <span
                class="year-text"
              >
                2005 — 2007
              </span>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1fuyhrh-MuiTypography-root"
            >
              Primary Secondary Education
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-dqqgqi-MuiTypography-root"
            >
              Bhavans Bala Mandir, Eroor
            </p>
          </div>
        </div>
        <div>
          <div
            class="MuiBox-root css-1j8oeui"
          >
            <div
              class="MuiBox-root css-y8rzaa"
            >
              <span
                class="year-text"
              >
                2007 — 2019
              </span>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1fuyhrh-MuiTypography-root"
            >
              Higher Secondary Education
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-dqqgqi-MuiTypography-root"
            >
              Bhavans Vidya Mandir, Eroor
            </p>
          </div>
        </div>
        <div>
          <div
            class="MuiBox-root css-1j8oeui"
          >
            <div
              class="MuiBox-root css-y8rzaa"
            >
              <span
                class="year-text"
              >
                2019 — Present
              </span>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1fuyhrh-MuiTypography-root"
            >
              B.Tech in Computer Science
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-dqqgqi-MuiTypography-root"
            >
              Model Engineering College, Thrikkakara
            </p>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`EducationSection matches snapshot (light mode) 1`] = `
<div>
  <section
    class="css-162n787"
    data-testid="education-section"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-5c1adp-MuiContainer-root"
    >
      <div>
        <h2
          class="css-2aktko"
        >
          Education
        </h2>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1i1q88g-MuiTypography-root"
        >
          The foundation that shaped my thinking and technical skills.
        </p>
      </div>
      <div
        class="MuiBox-root css-1gtzesu"
      >
        <div>
          <div
            class="MuiBox-root css-xggkmz"
          >
            <div
              class="MuiBox-root css-48ismi"
            >
              <span
                class="year-text"
              >
                2005 — 2007
              </span>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1vwo7a-MuiTypography-root"
            >
              Primary Secondary Education
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-15to6sp-MuiTypography-root"
            >
              Bhavans Bala Mandir, Eroor
            </p>
          </div>
        </div>
        <div>
          <div
            class="MuiBox-root css-xggkmz"
          >
            <div
              class="MuiBox-root css-48ismi"
            >
              <span
                class="year-text"
              >
                2007 — 2019
              </span>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1vwo7a-MuiTypography-root"
            >
              Higher Secondary Education
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-15to6sp-MuiTypography-root"
            >
              Bhavans Vidya Mandir, Eroor
            </p>
          </div>
        </div>
        <div>
          <div
            class="MuiBox-root css-xggkmz"
          >
            <div
              class="MuiBox-root css-48ismi"
            >
              <span
                class="year-text"
              >
                2019 — Present
              </span>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1vwo7a-MuiTypography-root"
            >
              B.Tech in Computer Science
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-15to6sp-MuiTypography-root"
            >
              Model Engineering College, Thrikkakara
            </p>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
